plugins {
	id 'java'
	id 'eclipse'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	//id 'io.awspring.cloud:spring-cloud-aws-dependencies'
}

group = 'com.amway'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
	implementation 'org.springframework.boot:spring-boot-starter-web'


    implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	
	
    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	
    //s3
    implementation platform('software.amazon.awssdk:bom:2.25.23')
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.0.1')
    implementation 'software.amazon.awssdk:s3'
    //implementation 'software.amazon.awssdk:netty-nio-client'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    
	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws
	implementation 'io.awspring.cloud:spring-cloud-aws-starter'
	implementation 'com.amazonaws.serverless:aws-serverless-java-container-springboot3:2.0.0'
	
	
	implementation 'software.amazon.awssdk:dynamodb-enhanced'//:1.12.691'
	
	
	
  
    
}

tasks.named('test') {
	useJUnitPlatform()
}

task buildZip(type: Zip) {
  from compileJava
  from processResources
  into('lib') {
    from(configurations.compileClasspath) {
      exclude 'tomcat-embed-*'
    }
  }
}

build.dependsOn buildZip
